# bevy_urdf

./: Cargo.toml  README.md  TODO.md
assets/: motors.csv
assets/manipulators/so-101/: so101_new_calib.urdf
assets/quadrotors/crazyflie/: cf2x.urdf
assets/robots/flamingo_edu/urdf/: Edu_v4.urdf
assets/robots/m2020/: MHS.urdf
assets/robots/rover/: m2020.urdf
assets/robots/unitree_a1/urdf/: a1.urdf  calf.stl  hip.stl  thigh.stl  thigh_mirror.stl  trunk.stl
assets/uuvs/: simple_uuv.urdf
crates/rapier3d-urdf/: Cargo.toml
crates/rapier3d-urdf/src/: lib.rs
examples/: drone.rs  drone_simple.rs  manipulator.rs  quadcopter_uav_rest.rs  quadrotor.rs  quadrotor_avian.rs  quadrotor_rapier.rs  quadrotor_rapier_rest.rs  quadruped.rs  simulate.rs  uav.rs  uuv.rs
patches/fast_ode-1.0.0/: Cargo.toml  Cargo.toml.orig  README.md  notes.md
patches/fast_ode-1.0.0/src/: lib.rs  optimizer_tests.rs  unit_tests.rs
src/: camera.rs  control.rs  drones.rs  events.rs  kinematics.rs  lib.rs  main.rs  map_terrain.rs  plugin.rs  quadrotor.rs  spawn.rs  uav.rs  urdf_asset_loader.rs  uuv.rs
