[package]
name = "bevy_urdf"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Import robots from URDF files and run simulation with rapier."
keywords = ["rapier", "bevy", "urdf", "robotics"]
repository = "https://github.com/stillonearth/bevy_urdf"

[dependencies]
anyhow = "1.0"
bevy = { version = "0.15", default-features = false, features = ["bevy_asset"] }
rapier3d-urdf = { version="0.4.0", features=["stl"] }
rapier3d = "0.23"
bevy_rapier3d = { version = "0.29", features = [ "simd-stable", "serde-serialize" ] }
bevy_stl = "0.15"
urdf-rs = "0.9"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_state",
    "bevy_winit",
    "bevy_window",
    "tonemapping_luts",
    "x11",
] }
bevy_flycam = "0.15.0"
bevy-inspector-egui = "0.30"
