[package]
name = "bevy_urdf"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Import robots from URDF files and run simulation with rapier."
keywords = ["rapier", "bevy", "urdf", "robotics"]
repository = "https://github.com/stillonearth/bevy_urdf"

[dependencies]
anyhow = "1.0"
bevy = { version = "0.16", default-features = false, features = ["bevy_asset"] }
rapier3d-urdf = { version = "0.6.0", features = ["stl", "wavefront"] }
rapier3d = { version = "0.25", features = ["serde-serialize"] }
bevy_rapier3d = { version="0.30", features = [
    "simd-stable",
    "serde-serialize",
] }
bevy_stl = "0.16"
bevy_obj = "0.16"
urdf-rs = "0.9"
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
nalgebra = "0.33"
csv = "1.3.1"
uom = "0.37"
uav = "0.1.1"
roxmltree = "0.20"

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_state",
    "bevy_winit",
    "bevy_window",
    "tonemapping_luts",
    "x11",
] }
bevy_flycam = { git = "https://github.com/kSDOT/bevy_flycam.git", rev="a6f36a"}
bevy-inspector-egui = "0.31"
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }